changed the url to the deployed version

--- a/dashboard.html
+++ b/dashboard.html
@@ -226,7 +226,7 @@
 
     <script>
         // === Backend URLs (edit here for easy changes) ===
-        const API_BASE_URL = 'http://localhost:5000';
+        const API_BASE_URL = 'https://comparisons-website.onrender.com';
         const APPLY_CHANGES_URL = 'http://localhost:5680/webhook-test/apply_changes';
 
         document.addEventListener('DOMContentLoaded', () => {
