--- a/dashboard.html
+++ b/dashboard.html
@@ -227,7 +227,7 @@
     <script>
         // === Backend URLs (edit here for easy changes) ===
         const API_BASE_URL = 'https://comparisons-website.onrender.com';
-        const APPLY_CHANGES_URL = 'http://localhost:5680/webhook-test/apply_changes';
+        const APPLY_CHANGES_URL = 'https://vk-holding.app.n8n.cloud/webhook-test/apply_changes';
 
         document.addEventListener('DOMContentLoaded', () => {
             const tableBody = document.getElementById('table-body');
