modified the session_id parameter to session_Id

--- a/dashboard.html
+++ b/dashboard.html
@@ -246,7 +246,7 @@
             const params = new URLSearchParams(window.location.search);
             const batchId = params.get('batch_id');
             const pdfData = params.get('pdfData');
-            const sessionId = params.get('session_id');
+            const sessionId = params.get('session_Id');
             console.log("Session ID:", sessionId);
 
             const showStatus = (message, isError = false) => {
